--- a/rsg/Cargo.toml
+++ b/rsg/Cargo.toml
@@ -2,7 +2,19 @@
 name = "rsg"
 version = "0.1.0"
 edition = "2024"
+authors = ["Bikathi Martin", "bikathimartin@outlook.com"]
+description = "A barebones, Rust-based CLI for generating random Strings"
+license = "Apache v2"
+categories = ["command-line-utilities"]
+keywords = ["random", "string", "generator", "rust"]
 
 [dependencies]
 clap = { version = "4.5", features = ["derive"] }
 rand = "0.9.1"
+
+[profile.release]
+opt-level = 3
+lto = true
+codegen-units = 1
+strip = true
+panic = 'abort'
