--- a/cvt/Cargo.toml
+++ b/cvt/Cargo.toml
@@ -10,3 +10,10 @@ keywords = ["random", "unit", "converter", "rust"]
 
 [dependencies]
 clap = { version = "4.5.38", features = ["derive"] }
+
+[profile.release]
+opt-level = 3
+lto = true
+codegen-units = 1
+strip = true
+panic = 'abort'
